// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductShortDescription component should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 8,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "marginBottom": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    Title
  </Text>
</View>
`;

exports[`ProductShortDescription component should render with full props 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 8,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "marginBottom": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    color="accent"
    style={
      Object {
        "paddingBottom": 8,
      }
    }
    weight="bold"
  >
    Free Shipping!
  </Text>
  <TouchableOpacity
    hitSlop={
      Object {
        "bottom": 14,
        "left": 14,
        "right": 14,
        "top": 14,
      }
    }
    onPress={[Function]}
    trackAction="build:app:pdp:productdescriptioncollection"
  >
    <Text>
      • 
      <Text
        color="primary"
      >
        Series
         Collection
      </Text>
    </Text>
  </TouchableOpacity>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    • 
    attribute name
    : 
    one, two, three
  </Text>
  <TouchableOpacity
    hitSlop={
      Object {
        "bottom": 14,
        "left": 14,
        "right": 14,
        "top": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 8,
        "paddingTop": 16,
      }
    }
    trackAction="build:app:pdp:productdescriptionreadmore"
  >
    <Text
      color="primary"
      weight="bold"
    >
      Read More
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`ProductShortDescription component should render without onCollectionPress prop 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 8,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "marginBottom": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    color="accent"
    style={
      Object {
        "paddingBottom": 8,
      }
    }
    weight="bold"
  >
    Free Shipping!
  </Text>
  <Text
    style={
      Object {
        "marginLeft": 8,
      }
    }
  >
    • 
    <Text>
      Series
       Collection
    </Text>
  </Text>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    • 
    attribute name
    : 
    one, two, three
  </Text>
  <TouchableOpacity
    hitSlop={
      Object {
        "bottom": 14,
        "left": 14,
        "right": 14,
        "top": 14,
      }
    }
    onPress={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "justifyContent": "center",
        "padding": 8,
        "paddingTop": 16,
      }
    }
    trackAction="build:app:pdp:productdescriptionreadmore"
  >
    <Text
      color="primary"
      weight="bold"
    >
      Read More
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`ProductShortDescription component should render without onPressReadMore prop 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 8,
        "paddingHorizontal": 8,
        "paddingVertical": 16,
      },
      Object {},
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "marginBottom": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    color="accent"
    style={
      Object {
        "paddingBottom": 8,
      }
    }
    weight="bold"
  >
    Free Shipping!
  </Text>
  <TouchableOpacity
    hitSlop={
      Object {
        "bottom": 14,
        "left": 14,
        "right": 14,
        "top": 14,
      }
    }
    onPress={[Function]}
    trackAction="build:app:pdp:productdescriptioncollection"
  >
    <Text>
      • 
      <Text
        color="primary"
      >
        Series
         Collection
      </Text>
    </Text>
  </TouchableOpacity>
  <Text
    style={
      Array [
        Object {
          "marginLeft": 8,
        },
        Object {
          "color": "#63666A",
          "fontFamily": "ProximaNova-Regular",
          "fontSize": 16,
          "lineHeight": 21,
        },
      ]
    }
  >
    • 
    attribute name
    : 
    one, two, three
  </Text>
</View>
`;
